# tablet_second_monitor

./: Cargo.toml
src/: config.rs  error.rs  main.rs  utils.rs
src/capture/: mod.rs  stream.rs
src/input/: mod.rs
src/network/: mod.rs
static/: index.html
tablet_second_monitor/: Cargo.toml
